<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.raees.bho.MainActivity">


    <item
        android:id="@+id/record"
        android:title="@string/record"
        android:icon="@drawable/mic2"
        app:showAsAction="always" />

    <item
        android:id="@+id/nu"
        android:title=""
        app:showAsAction="always" />



    <item
        android:id="@+id/shareAudio"
        android:title="@string/shareAudio"
        app:showAsAction="never"/>


    <item
        android:id="@+id/shareVideo"
        android:title="@string/shareVideo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/shareLog"
        android:title="@string/shareLogs"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
